--- a/index.html
+++ b/index.html
@@ -2,226 +2,137 @@
 <html lang="pl">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5, user-scalable=yes">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Odkrywca Mapy Politycznej</title>
   <script>
+    // Autoryzacja osadzania
     (function() {
-      const allowedDomains = ["bethink.pl","wiecejnizmatura.pl"];
-      function isAllowedReferrer(ref) {
+      const allowedDomains = ["bethink.pl", "wiecejnizmatura.pl"];
+      function isAllowed(ref) {
         try { return ref && allowedDomains.some(d => new URL(ref).hostname.endsWith(d)); }
         catch { return false; }
       }
-      if (window !== window.parent) {
-        const ref = document.referrer;
-        if (!isAllowedReferrer(ref)) {
-          window.addEventListener('load', () => {
-            document.body.innerHTML = "<div style='display:flex;justify-content:center;align-items:center;height:100vh;'><h1 style='color:red;text-align:center;font-size:2rem;'>Ta gra może być osadzana <br>tylko na platformach Bethink lub Więcej niż Matura.</h1></div>";
-          });
-          return;
-        }
+      if (window !== window.parent && !isAllowed(document.referrer)) {
+        document.addEventListener('DOMContentLoaded', () => {
+          document.body.innerHTML = 
+            `<div style="display:flex;align-items:center;justify-content:center;height:100vh;">
+              <h1 style="color:red;text-align:center;">Ta gra może być osadzana tylko na platformach Bethink lub Więcej niż Matura.</h1>
+            </div>`;
+        });
       }
     })();
   </script>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
-    html, body {
-      margin:0;
-      padding:0;
-      /* Pozwól na przewijanie, by ukryte obszary były dostępne */
-      overflow:auto;
-      height:100%;
-      width:100%;
-    }
-    body { font-family:'Lato',sans-serif; background:#eef2f9; }
-    .game-container {
-      position:relative;
-      /* dopasuj zawartość do wielkości iframe/slajdu */
-      width:100%;
-      height:100%;
-      display:flex;
-      flex-direction:column;
-      align-items:center;
-      padding:1rem;
-      overflow:auto;
-    }
-    .header { text-align:center; margin-bottom:1rem; }
-    #map-wrapper {
-      position:relative;
-      flex:1;
-      width:100%;
-      /* Pozwól przewijać mapę, jeśli jest większa niż kontener */
-      overflow:auto;
-      touch-action:none;
-    }
-    #map-image, #marker-container {
-      position:absolute;
-      top:0;
-      left:0;
-      will-change:transform;
-    }
-    #map-image {
-      user-select:none;
-      touch-action:none;
-    }
-    .marker, .country-label {
-      position:absolute;
-      transform-origin:top left;
-    }
-    .marker { width:35px; height:35px; border-radius:50%; display:flex; align-items:center; justify-content:center; color:white; font-weight:bold; }
-    .marker.correct { background:rgba(22,163,74,0.9); border:3px solid white; box-shadow:0 2px 8px rgba(0,0,0,0.3); }
-    .marker.incorrect { background:rgba(220,38,38,0.9); border:3px solid white; box-shadow:0 2px 8px rgba(0,0,0,0.3); animation:fadeOut 1s forwards; }
-    .country-label { background:rgba(0,0,0,0.8); color:white; padding:6px 12px; border-radius:6px; font-size:14px; white-space:nowrap; font-weight:500; box-shadow:0 2px 8px rgba(0,0,0,0.3); }
-    @keyframes fadeOut { from{opacity:1;} to{opacity:0;} }
-    .feedback { height:3rem; margin-top:1rem; }
-    #reset-btn { margin-top:0.5rem; }
+    html, body { margin: 0; padding: 0; height: 100%; width: 100%; }
+    body { font-family: 'Lato', sans-serif; background-color: #eef2f9; }
+    .game-container { width: 100%; height: 100%; display: flex; flex-direction: column; }
+    .header { text-align: center; padding: 1rem; }
+    #map-wrapper { position: relative; flex: 1; }
+    #map-image { width: 100%; height: auto; display: block; }
+    .marker { position: absolute; width: 30px; height: 30px; border-radius: 50%; display: flex; align-items: center; justify-content: center; color: #fff; font-weight: bold; }
+    .marker.correct { background-color: rgba(22,163,74,0.9); border: 2px solid #fff; }
+    .marker.incorrect { background-color: rgba(220,38,38,0.9); border: 2px solid #fff; animation: fadeOut 1s forwards; }
+    .country-label { position: absolute; background: rgba(0,0,0,0.7); color: #fff; padding: 4px 8px; border-radius: 4px; font-size: 12px; white-space: nowrap; }
+    @keyframes fadeOut { to { opacity: 0; } }
+    .feedback { text-align: center; padding: 0.5rem; min-height: 1.5rem; }
+    #reset-btn { margin: 0.5rem auto; display: block; }
   </style>
 </head>
 <body>
   <div class="game-container">
     <div class="header">
-      <h1 class="text-2xl md:text-3xl lg:text-4xl font-bold text-gray-800">Odkrywca Mapy Politycznej</h1>
-      <p id="question-text" class="text-blue-600 text-base md:text-lg font-medium min-h-[2rem]"></p>
+      <h1 class="text-2xl font-bold">Odkrywca Mapy Politycznej</h1>
+      <p id="question-text" class="text-blue-600"></p>
     </div>
     <div id="map-wrapper">
       <img id="map-image" src="licensed-image.jpg" alt="Mapa polityczna Europy">
       <div id="marker-container"></div>
     </div>
-    <div id="feedback-container" class="feedback text-center"></div>
-    <button id="reset-btn" class="hidden bg-blue-600 hover:bg-blue-700 active:bg-blue-800 text-white font-bold py-2 px-4 rounded-lg">🔄 Zagraj jeszcze raz</button>
+    <div id="feedback" class="feedback"></div>
+    <button id="reset-btn" class="hidden bg-blue-600 text-white py-2 px-4 rounded">Zagraj jeszcze raz</button>
   </div>
   <script>
-  document.addEventListener('DOMContentLoaded', () => {
-    // state
-    let scale = 1, lastScale = 1, posX = 0, posY = 0, lastX = 0, lastY = 0, startDist = 0;
-    const wrapper = document.getElementById('map-wrapper');
-    const mapImg = document.getElementById('map-image');
-    const markerContainer = document.getElementById('marker-container');
-    const questionText = document.getElementById('question-text');
-    const feedback = document.getElementById('feedback-container');
-    const resetBtn = document.getElementById('reset-btn');
-    
-    // data
-    const gameData = [
-      {id:'pl',name:'Polska',q:'Zaznacz na mapie Polskę.',shape:'poly',coords:[[50,45],[48,47],[47,50],[47,54],[49,57],[52,58],[56,56],[58,53],[58,49],[55,47],[52,46]]},
-      {id:'es',name:'Hiszpania',q:'Gdzie leży Hiszpania?',shape:'rect',coords:{x:17,y:76,w:15,h:16}},
-      {id:'it',name:'Włochy',q:'Zaznacz kraj, którego stolicą jest Rzym.',shape:'rect',coords:{x:39,y:67,w:8,h:17}},
-      {id:'no',name:'Norwegia',q:'Wskaż Norwegię.',shape:'rect',coords:{x:34,y:23,w:13,h:26}},
-      {id:'tr',name:'Turcja',q:'Znajdź Turcję.',shape:'rect',coords:{x:66,y:67,w:18,h:14}},
-      {id:'ua',name:'Ukraina',q:'Zaznacz Ukrainę.',shape:'rect',coords:{x:57,y:52,w:14,h:12}}
-    ];
-    let questions, idx = 0, active = true;
+    document.addEventListener('DOMContentLoaded', () => {
+      const gameData = [
+        { id:'pl', name:'Polska', question:'Zaznacz Polskę.', shape:'poly', coords:[[50,45],[48,47],[47,50],[47,54],[49,57],[52,58],[56,56],[58,53],[58,49],[55,47],[52,46]] },
+        { id:'es', name:'Hiszpania', question:'Gdzie leży Hiszpania?', shape:'rect', coords:{x:17,y:76,w:15,h:16} },
+        { id:'it', name:'Włochy', question:'Zaznacz kraj ze stolicą w Rzymie.', shape:'rect', coords:{x:39,y:67,w:8,h:17} },
+        { id:'no', name:'Norwegia', question:'Wskaż Norwegię.', shape:'rect', coords:{x:34,y:23,w:13,h:26} },
+        { id:'tr', name:'Turcja', question:'Znajdź Turcję.', shape:'rect', coords:{x:66,y:67,w:18,h:14} },
+        { id:'ua', name:'Ukraina', question:'Zaznacz Ukrainę.', shape:'rect', coords:{x:57,y:52,w:14,h:12} }
+      ];
+      let questions, idx = 0;
+      const img = document.getElementById('map-image');
+      const markerContainer = document.getElementById('marker-container');
+      const questionText = document.getElementById('question-text');
+      const feedback = document.getElementById('feedback');
+      const resetBtn = document.getElementById('reset-btn');
 
-    function shuffle(a){for(let i=a.length-1;i>0;i--){const j=Math.floor(Math.random()*(i+1));[a[i],a[j]]=[a[j],a[i]];}return a;}
-    function loadQuestion(){
-      if(idx>=questions.length){ endGame(); return; }
-      active=true;
-      questionText.textContent = questions[idx].q;
-      feedback.innerHTML = '';
-      resetBtn.classList.add('hidden');
-    }
-    function applyTransform(){
-      const t = `translate(${posX}px,${posY}px) scale(${scale})`;
-      mapImg.style.transform = t;
-      markerContainer.style.transform = t;
-    }
-    function getDist(t){return Math.hypot(t[0].clientX-t[1].clientX, t[0].clientY-t[1].clientY);}    
-    
-    // pinch & pan
-    wrapper.addEventListener('touchstart',e=>{
-      if(e.touches.length===2){ e.preventDefault(); startDist=getDist(e.touches); lastScale=scale; }
-      else if(e.touches.length===1){ lastX=e.touches[0].clientX-posX; lastY=e.touches[0].clientY-posY; }
-    },{passive:false});
-    wrapper.addEventListener('touchmove',e=>{
-      if(e.touches.length===2){ e.preventDefault(); const d=getDist(e.touches); scale=Math.min(Math.max(lastScale*(d/startDist),0.5),5); applyTransform(); }
-      else if(e.touches.length===1){ e.preventDefault(); posX=e.touches[0].clientX-lastX; posY=e.touches[0].clientY-lastY; applyTransform(); }
-    },{passive:false});
+      function shuffle(arr) {
+        return arr.sort(() => Math.random() - 0.5);
+      }
+      function loadQuestion() {
+        if (idx >= questions.length) return showEnd();
+        const q = questions[idx];
+        questionText.textContent = q.question;
+        feedback.textContent = '';
+        resetBtn.classList.add('hidden');
+      }
+      function showEnd() {
+        questionText.textContent = 'Gratulacje! Ukończyłeś wyzwanie.';
+        resetBtn.classList.remove('hidden');
+      }
+      img.addEventListener('click', e => {
+        if (resetBtn.classList.contains('hidden') === false) return;
+        const rect = img.getBoundingClientRect();
+        const xPct = ((e.clientX - rect.left) / rect.width) * 100;
+        const yPct = ((e.clientY - rect.top) / rect.height) * 100;
+        const cur = questions[idx];
+        let correct = false;
+        if (cur.shape === 'rect') {
+          const c = cur.coords;
+          correct = xPct >= c.x && xPct <= c.x + c.w && yPct >= c.y && yPct <= c.y + c.h;
+        } else {
+          correct = (() => {
+            let inside = false;
+            for (let i = 0, j = cur.coords.length - 1; i < cur.coords.length; j = i++) {
+              const xi = cur.coords[i][0], yi = cur.coords[i][1];
+              const xj = cur.coords[j][0], yj = cur.coords[j][1];
+              if (((yi > yPct) !== (yj > yPct)) && (xPct < (xj - xi) * (yPct - yi) / (yj - yi) + xi)) inside = !inside;
+            }
+            return inside;
+          })();
+        }
+        const marker = document.createElement('div');
+        marker.className = `marker ${correct ? 'correct' : 'incorrect'}`;
+        marker.style.left = `${xPct}%`;
+        marker.style.top = `${yPct}%`;
+        marker.textContent = correct ? '✔' : '✖';
+        markerContainer.appendChild(marker);
+        if (correct) {
+          const label = document.createElement('div');
+          label.className = 'country-label';
+          label.style.left = `${xPct}%`;
+          label.style.top = `${yPct}%`;
+          label.textContent = cur.name;
+          markerContainer.appendChild(label);
+          feedback.textContent = '✔ Poprawnie!';
+          idx++;
+          setTimeout(loadQuestion, 1000);
+        } else {
+          feedback.textContent = '✖ Spróbuj ponownie.';
+          setTimeout(() => marker.remove(), 800);
+        }
+      });
+      resetBtn.addEventListener('click', () => {
+        questions = shuffle([...gameData]); idx = 0; markerContainer.innerHTML = ''; loadQuestion();
+      });
 
-    // tap to answer
-    wrapper.addEventListener('click', e => {
-      if (!active) return;
-      e.preventDefault();
-      // Use transformed image bounding rect to get correct coordinates under transforms
-      const imgRect = mapImg.getBoundingClientRect();
-      const clickX = e.clientX;
-      const clickY = e.clientY;
-      // Calculate percent relative to displayed (transformed) image
-      const x = ((clickX - imgRect.left) / imgRect.width) * 100;
-      const y = ((clickY - imgRect.top) / imgRect.height) * 100;
-      const cur = questions[idx];
-      let ok = false;
-      if (cur.shape === 'rect') {
-        const c = cur.coords;
-        ok = x >= c.x && x <= c.x + c.w && y >= c.y && y <= c.y + c.h;
-      } else {
-        ok = (function() {
-          let inside = false;
-          for (let i = 0, j = cur.coords.length - 1; i < cur.coords.length; j = i++) {
-            const xi = cur.coords[i][0], yi = cur.coords[i][1];
-            const xj = cur.coords[j][0], yj = cur.coords[j][1];
-            const intersect = ((yi > y) !== (yj > y)) &&
-                              (x < (xj - xi) * (y - yi) / (yj - yi) + xi);
-            if (intersect) inside = !inside;
-          }
-          return inside;
-        })();
-      }
-      const m = document.createElement('div');
-      m.className = `marker ${ok ? 'correct' : 'incorrect'}`;
-      m.style.left = `${x}%`;
-      m.style.top = `${y}%`;
-      m.textContent = ok ? '✔' : '✖';
-      markerContainer.appendChild(m);
-      if (ok) {
-        const lbl = document.createElement('div');
-        lbl.className = 'country-label';
-        lbl.style.left = `${x}%`;
-        lbl.style.top = `${y}%`;
-        lbl.textContent = cur.name;
-        markerContainer.appendChild(lbl);
-        active = false;
-        feedback.innerHTML = `<div class=\"text-green-600 font-medium text-lg\">✔ Świetnie!</div>`;
-        setTimeout(() => loadQuestion(), 1200);
-      } else {
-        setTimeout(() => m.remove(), 800);
-        feedback.innerHTML = `<div class=\"text-red-600 font-medium\">✖ Spróbuj ponownie!</div>`;
-        setTimeout(() => feedback.innerHTML = '', 1000);
-      }
+      // Start
+      questions = shuffle([...gameData]);
+      loadQuestion();
     });
-      const cx = (e.clientX - rect.left - posX) / scale;
-      const cy = (e.clientY - rect.top - posY) / scale;
-      const x = cx / rect.width * 100;
-      const y = cy / rect.height * 100;
-      const cur = questions[idx];
-      let ok = false;
-      if(cur.shape==='rect'){
-        const c = cur.coords;
-        ok = x>=c.x && x<=c.x+c.w && y>=c.y && y<=c.y+c.h;
-      } else {
-        ok = (function(){ let inside=false; for(let i=0,j=cur.coords.length-1;i<cur.coords.length;j=i++){ const xi=cur.coords[i][0], yi=cur.coords[i][1], xj=cur.coords[j][0], yj=cur.coords[j][1]; const inter = ((yi>y)!=(yj>y)) && (x < (xj-xi)*(y-yi)/(yj-yi)+xi); if(inter) inside=!inside; } return inside; })();
-      }
-      const m = document.createElement('div');
-      m.className = `marker ${ok?'correct':'incorrect'}`;
-      m.style.left = `${x}%`;
-      m.style.top = `${y}%`;
-      m.textContent = ok?'✔':'✖';
-      markerContainer.appendChild(m);
-      if(ok){
-        const lbl = document.createElement('div'); lbl.className='country-label'; lbl.style.left=`${x}%`; lbl.style.top=`${y}%`; lbl.textContent=cur.name; markerContainer.appendChild(lbl);
-        active=false;
-        feedback.innerHTML=`<div class="text-green-600 font-medium text-lg">✔ Świetnie!</div>`;
-        setTimeout(()=>loadQuestion(),1200);
-      } else {
-        setTimeout(()=>m.remove(),800);
-        feedback.innerHTML=`<div class="text-red-600 font-medium">✖ Spróbuj ponownie!</div>`;
-        setTimeout(()=>feedback.innerHTML='',1000);
-      }
-    });
-
-    resetBtn.addEventListener('click', startGame);
-    function endGame(){ questionText.textContent='🎉 Gratulacje!'; resetBtn.classList.remove('hidden'); }
-    function startGame(){ questions = shuffle([...gameData]); idx=0; scale=1; posX=posY=0; applyTransform(); loadQuestion(); }
-    startGame();
-  });
   </script>
 </body>
 </html>
